--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta name="description" content="A new Flutter project." />
-
+    <meta name="viewport" content="width=1024" />
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -58,7 +58,7 @@
         firebase.initializeApp(firebaseConfig);
     </script>
     <script>
-        var serviceWorkerVersion = '2096741930';
+        var serviceWorkerVersion = '2517032710';
         var scriptLoaded = false;
 
         function loadMainDartJs() {
