--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="/" />
+    <base href="" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -58,7 +58,7 @@
         firebase.initializeApp(firebaseConfig);
     </script>
     <script>
-        var serviceWorkerVersion = '2998566149';
+        var serviceWorkerVersion = "2998566149";
         var scriptLoaded = false;
 
         function loadMainDartJs() {
